--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch src/index.js",
+    "start-dev": "node --watch src/index.js",
+    "start-prod": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "William Daza",
