--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,7 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/src" }]
+  "functions": { "api/**/*.js": { "runtime": "nodejs16" } },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "handle": "filesystem" }
+  ]
 }
