--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "functions": { "api/**/*.js": { "runtime": "nodejs16" } },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "handle": "filesystem" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/app" }]
 }
